Fix alignment

--- a/version_control/Codurance_September2020/css/modules/LP-form-two-columns.css
+++ b/version_control/Codurance_September2020/css/modules/LP-form-two-columns.css
@@ -103,7 +103,8 @@
     .form__wrapper{
         flex-direction: row;
         align-items: start;
-        justify-content: space-evenly;
+        justify-content: space-between;
+        padding: 4em;
     }
 
     .form__text{
