--- a/version_control/Codurance_September2020/css/modules/software-craftsmanship.css
+++ b/version_control/Codurance_September2020/css/modules/software-craftsmanship.css
@@ -2,7 +2,7 @@
 
 .cm-software-crafts{
   {{ utils.white_to_tango() }}
-  padding: 3em;
+  padding: 4em;
 }
 
 .cm-software-crafts__content-wrapper{
